[project]
name = "google-app"
version = "0.1.0"
description = "Convert Google Docs to Google Forms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "uvicorn>=0.25.0",
    "google-auth>=2.28.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.128.0",
    "anthropic>=0.42.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.0.0",
    "pyjwt>=2.11.0",
    "cryptography>=46.0.5",
    "pillow>=10.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[[tool.uv.index]]
url = "https://artifacts.cat.com/artifactory/api/pypi/cat-digital-pypi-local/simple"
